src/test/deca/syntax/invalid/ecriture_dehors_brace.deca
// Description:
//    on ecrit en dehors des braces
//
// Resultats:
//    Erreur du parser ligne 12
//
// Historique:
//    Cree le 09/01/2024

{
}
int x = 2;